# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "ENGINE_DEFINES")

cc_library(
    name = "api",
    hdrs = [
        "client.h",
        "keycodes.h",
        "keys.h",
    ],
    defines = ENGINE_DEFINES,
    visibility = [
        "//code/q3_ui:__pkg__",
        "//code/sdl:__pkg__",
        "//code/sys:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":snd_api",
        "//code/cgame:api",
        "//code/game:bg_api",
        "//code/qcommon",
        "//code/renderer:api",
        "//code/ui:api",
    ],
)

cc_library(
    name = "snd_api",
    hdrs = ["snd_public.h"],
    visibility = ["//code/sdl:__pkg__"],
    deps = ["//code/qcommon:shared_api"],
)
