# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "DIST_VISIBILITY", "ENGINE_DEFINES")

cc_library(
    name = "client",
    srcs = [
        "cl_avi.c",
        "cl_cgame.c",
        "cl_cin.c",
        "cl_console.c",
        "cl_input.c",
        "cl_keys.c",
        "cl_main.c",
        "cl_net_chan.c",
        "cl_parse.c",
        "cl_scrn.c",
        "cl_ui.c",
    ],
    defines = ["USE_VOIP"],
    deps = [
        ":api",
        ":curl",
        ":snd_api",
        ":snd_internal_api",
        "//code/botlib:api",
        "//code/cgame:api",
        "//code/game:bg_api",
        "//code/qcommon",
        "//code/renderer:api",
        "//code/sys:main",
        "//code/sys:sys_local",
        "//code/ui:api",
    ],
)

cc_library(
    name = "curl",
    srcs = [
        "cl_curl.c",
    ],
    hdrs = [
        "cl_curl.h",
    ],
    deps = [
        ":api",
        "//code/cgame:api",
        "//code/game:bg_api",
        "//code/qcommon",
        "//code/renderer:api",
        "//code/ui:api",
        "@curl",
    ],
)

cc_library(
    name = "api",
    hdrs = [
        "client.h",
        "keycodes.h",
        "keys.h",
    ],
    defines = ["USE_VOIP"] + ENGINE_DEFINES,
    visibility = [
        "//code/q3_ui:__pkg__",
        "//code/sdl:__pkg__",
        "//code/sys:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":snd_api",
        "//code/cgame:api",
        "//code/game:bg_api",
        "//code/qcommon",
        "//code/renderer:api",
        "//code/ui:api",
        "@opus//:opus_interface",
    ],
)

cc_library(
    name = "snd_api",
    hdrs = ["snd_public.h"],
    visibility = ["//code/sdl:__pkg__"],
    deps = ["//code/qcommon:shared_api"],
)

cc_library(
    name = "snd_internal_api",
    hdrs = ["snd_local.h"],
    visibility = ["//code/sdl:__pkg__"],
    deps = [
        ":snd_api",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "snd_codec_api",
    hdrs = [
        "snd_codec.h",
    ],
    defines = [
        "USE_CODEC_OPUS",
        "USE_CODEC_VORBIS",
    ],
    deps = [
        "//code/qcommon",
        "//code/qcommon:shared_api",
        "@opus",
        "@vorbis",
    ],
)

cc_library(
    name = "snd_codec",
    srcs = [
        "snd_codec.c",
        "snd_codec_ogg.c",
        "snd_codec_opus.c",
        "snd_codec_wav.c",
    ],
    deps = [
        ":api",
        ":snd_codec_api",
        "//code/qcommon",
        "//code/qcommon:shared_api",
        "@opus",
        "@opusfile",
        "@vorbis",
    ],
)

cc_library(
    name = "snd",
    srcs = [
        "snd_adpcm.c",
        "snd_dma.c",
        "snd_main.c",
        "snd_mem.c",
        "snd_mix.c",
        "snd_wavelet.c",
    ],
    deps = [
        ":api",
        ":snd_codec_api",
        ":snd_internal_api",
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "openal_support",
    srcs = [
        "qal.c",
        "qal.h",
        "snd_openal.c",
    ],
    defines = ["USE_OPENAL"],
    deps = [
        ":api",
        ":snd_api",
        ":snd_codec_api",
        ":snd_internal_api",
        "//code/qcommon",
        "//code/qcommon:shared_api",
        "@openal",
    ],
)

cc_library(
    name = "clientexe",
    visibility = DIST_VISIBILITY,
    deps = [
        ":client",
        ":openal_support",
        ":snd",
        ":snd_codec",
        "//code/botlib:botlib_impl",
        "//code/collision_map:cm_impl",
        "//code/qcommon:cmd",
        "//code/qcommon:common",
        "//code/qcommon:cvar",
        "//code/qcommon:files",
        "//code/qcommon:md4",
        "//code/qcommon:net",
        "//code/qcommon:vm",
        "//code/renderer",
        "//code/sdl:sdl_input",
        "//code/sdl:sdl_renderer",
        "//code/sdl:sdl_snd",
        "//code/server",
        "//code/sys:main",
        "//code/sys:sys_local",
        "//code/sys:sys_osx",
        "//code/sys:sys_unix",
        "@opus",
    ],
)
