# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "ENGINE_DEFINES", "EXTRA_WARNINGS")

cc_library(
    name = "cm",
    hdrs = ["cm_public.h"],
    copts = EXTRA_WARNINGS,
    includes = ["."],
    visibility = ["//code/qcommon:__pkg__"],
)

cc_library(
    name = "cm_impl",
    srcs = [
        "cm_load.c",
        "cm_patch.c",
        "cm_polylib.c",
        "cm_test.c",
        "cm_trace.c",
    ],
    hdrs = [
        "cm_local.h",
        "cm_patch.h",
        "cm_polylib.h",
    ],
    copts = EXTRA_WARNINGS,
    defines = ENGINE_DEFINES,
    visibility = [
        "//code/client:__pkg__",
        "//code/server:__pkg__",
    ],
    deps = [
        "//code/qcommon",
        "//code/qcommon:shared_api",
    ],
)
