load("//build_defs:rules.bzl", "CLIENT_GAME_DEFINES", "SERVER_GAME_COPTS", "SERVER_GAME_DEFINES", "TEAM_ARENA_DEFINES")

cc_library(
    name = "bg_api",
    hdrs = [
        "bg_public.h",
    ],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/server:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "server_api",
    hdrs = [
        "g_public.h",
    ],
    visibility = [
        "//code/server:__pkg__",
    ],
    deps = [
        "//code/qcommon:shared_api",
    ],
)

# TODO: This should not be a CC library as it is targeting qvm but we can address later
cc_library(
    name = "bg_lib-qvm",
    srcs = [
        "bg_lib.c",
    ],
    hdrs = [
        "bg_lib.h",
    ],
    copts = ["-Wno-empty-translation-unit"],
    visibility = [
        "//code/cgame:__pkg__",
    ],
)

cc_library(
    name = "bg_misc-client-baseq3",
    srcs = [
        "bg_local.h",
        "bg_misc.c",
    ],
    defines = CLIENT_GAME_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "bg_misc-client-teamarena",
    srcs = [
        "bg_local.h",
        "bg_misc.c",
    ],
    defines = CLIENT_GAME_DEFINES + TEAM_ARENA_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    # bg = Both Game which is shared between client and server games
    # It probably should be separated in a more meaningful way but
    # that is a job for another time
    name = "bg-baseq3",
    srcs = [
        "bg_local.h",
        "bg_pmove.c",
        "bg_slidemove.c",
    ],
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    # bg = Both Game which is shared between client and server games
    # It probably should be separated in a more meaningful way but
    # that is a job for another time
    name = "bg-teamarena",
    srcs = [
        "bg_local.h",
        "bg_pmove.c",
        "bg_slidemove.c",
    ],
    defines = TEAM_ARENA_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

_COMMON_SRC = [
    "ai_chat.c",
    "ai_chat.h",
    "ai_cmd.c",
    "ai_cmd.h",
    "ai_dmnet.c",
    "ai_dmnet.h",
    "ai_dmq3.c",
    "ai_dmq3.h",
    "ai_main.c",
    "ai_main.h",
    "ai_team.c",
    "ai_team.h",
    "ai_vcmd.c",
    "ai_vcmd.h",
    "bg_local.h",
    "bg_misc.c",
    "chars.h",
    "g_active.c",
    "g_arenas.c",
    "g_bot.c",
    "g_client.c",
    "g_cmds.c",
    "g_combat.c",
    "g_items.c",
    "g_local.h",
    "g_main.c",
    "g_mem.c",
    "g_misc.c",
    "g_missile.c",
    "g_mover.c",
    "g_session.c",
    "g_spawn.c",
    "g_svcmds.c",
    "g_target.c",
    "g_team.c",
    "g_team.h",
    "g_trigger.c",
    "g_utils.c",
    "g_weapon.c",
    "inv.h",
    "match.h",
    "syn.h",
]

_BASEQ3_SRC = _COMMON_SRC

# cg_syscalls is required when building the shared library but
# should not be required when building qvm library
_NATIVE_LIB_SRC = ["g_syscalls.c"]

cc_library(
    name = "baseq3",
    srcs = _BASEQ3_SRC + _NATIVE_LIB_SRC,
    copts = SERVER_GAME_COPTS,
    defines = SERVER_GAME_DEFINES,
    visibility = ["//game/baseq3:__pkg__"],
    deps = [
        ":bg-baseq3",
        ":server_api",
        "//code/botlib",
        "//code/botlib:api",
        "//code/qcommon:shared",
        "//code/qcommon:shared_api",
        "//code/qcommon:voicechat",
    ],
)

_TEAM_ARENA_SRC = _COMMON_SRC

cc_library(
    name = "teamarena",
    srcs = _TEAM_ARENA_SRC + _NATIVE_LIB_SRC,
    copts = SERVER_GAME_COPTS,
    defines = TEAM_ARENA_DEFINES + SERVER_GAME_DEFINES,
    visibility = ["//game/teamarena:__pkg__"],
    deps = [
        ":bg-teamarena",
        ":server_api",
        "//code/botlib",
        "//code/botlib:api",
        "//code/qcommon:shared",
        "//code/qcommon:shared_api",
        "//code/qcommon:voicechat",
    ],
)
