# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "CLIENT_GAME_DEFINES", "SERVER_GAME_COPTS", "SERVER_GAME_DEFINES", "TEAM_ARENA_DEFINES")

cc_library(
    name = "bg_api",
    hdrs = ["bg_public.h"],
    deps = ["//code/qcommon:shared_api"],
)

cc_library(
    name = "server_api",
    hdrs = ["g_public.h"],
    deps = ["//code/qcommon:shared_api"],
)

cc_library(
    name = "bg_misc-client-baseq3",
    srcs = [
        "bg_local.h",
        "bg_misc.c",
    ],
    defines = CLIENT_GAME_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "bg_misc-client-teamarena",
    srcs = [
        "bg_local.h",
        "bg_misc.c",
    ],
    defines = CLIENT_GAME_DEFINES + TEAM_ARENA_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    # bg = Both Game which is shared between client and server games
    # It probably should be separated in a more meaningful way but
    # that is a job for another time
    name = "bg-baseq3",
    srcs = [
        "bg_local.h",
        "bg_pmove.c",
        "bg_slidemove.c",
    ],
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    # bg = Both Game which is shared between client and server games
    # It probably should be separated in a more meaningful way but
    # that is a job for another time
    name = "bg-teamarena",
    srcs = [
        "bg_local.h",
        "bg_pmove.c",
        "bg_slidemove.c",
    ],
    defines = TEAM_ARENA_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)
