# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:rules.bzl", "BASE_WARNINGS_EX", "CLIENT_GAME_DEFINES", "SERVER_GAME_COPTS", "SERVER_GAME_DEFINES", "TEAM_ARENA_DEFINES")

cc_library(
    name = "bg_api",
    hdrs = ["bg_public.h"],
    copts = BASE_WARNINGS_EX,
    visibility = [
        "//code/cgame:__pkg__",
        "//code/client:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/server:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = ["//code/qcommon:shared_api"],
)

cc_library(
    name = "server_api",
    hdrs = ["g_public.h"],
    copts = BASE_WARNINGS_EX,
    visibility = ["//code/server:__pkg__"],
    deps = ["//code/qcommon:shared_api"],
)

cc_library(
    name = "bg_misc-client-baseq3",
    srcs = ["bg_misc.c"],
    hdrs = ["bg_local.h"],
    copts = BASE_WARNINGS_EX,
    defines = CLIENT_GAME_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    name = "bg_misc-client-teamarena",
    srcs = ["bg_misc.c"],
    hdrs = ["bg_local.h"],
    copts = BASE_WARNINGS_EX,
    defines = CLIENT_GAME_DEFINES + TEAM_ARENA_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/q3_ui:__pkg__",
        "//code/ui:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    # bg = Both Game which is shared between client and server games
    # It probably should be separated in a more meaningful way but
    # that is a job for another time
    name = "bg-baseq3",
    srcs = [
        "bg_pmove.c",
        "bg_slidemove.c",
    ],
    hdrs = ["bg_local.h"],
    copts = BASE_WARNINGS_EX,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

cc_library(
    # bg = Both Game which is shared between client and server games
    # It probably should be separated in a more meaningful way but
    # that is a job for another time
    name = "bg-teamarena",
    srcs = [
        "bg_pmove.c",
        "bg_slidemove.c",
    ],
    hdrs = ["bg_local.h"],
    copts = BASE_WARNINGS_EX,
    defines = TEAM_ARENA_DEFINES,
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
    ],
    deps = [
        ":bg_api",
        "//code/qcommon:shared_api",
    ],
)

_COMMON_SRC = [
    "ai_chat.c",
    "ai_cmd.c",
    "ai_dmnet.c",
    "ai_dmq3.c",
    "ai_main.c",
    "ai_team.c",
    "ai_vcmd.c",
    "bg_misc.c",
    "g_active.c",
    "g_arenas.c",
    "g_bot.c",
    "g_client.c",
    "g_cmds.c",
    "g_combat.c",
    "g_items.c",
    "g_main.c",
    "g_mem.c",
    "g_misc.c",
    "g_missile.c",
    "g_mover.c",
    "g_session.c",
    "g_spawn.c",
    "g_syscalls.c",
    "g_svcmds.c",
    "g_target.c",
    "g_team.c",
    "g_trigger.c",
    "g_utils.c",
    "g_weapon.c",
]

_COMMON_HDRS = [
    "ai_chat.h",
    "ai_cmd.h",
    "ai_dmnet.h",
    "ai_dmq3.h",
    "ai_main.h",
    "ai_team.h",
    "ai_vcmd.h",
    "bg_local.h",
    "chars.h",
    "g_local.h",
    "g_spawn.h",
    "g_team.h",
    "inv.h",
    "match.h",
    "syn.h",
]

# TODO: Remove these suppressions once the warnings have been addressed
SUPPRESS_WARNINGS_COPTS = [
    # The next (mostly) suppresses use of abs(x) when it should be fabs(x)
    "-Wno-absolute-value",
    # The next suppresses problems with running 32-bit code in 64-bit environment
    "-Wno-pointer-to-int-cast",
]

cc_library(
    name = "baseq3",
    srcs = _COMMON_SRC,
    hdrs = _COMMON_HDRS,
    copts = SERVER_GAME_COPTS + SUPPRESS_WARNINGS_COPTS,
    defines = SERVER_GAME_DEFINES,
    visibility = ["//game/baseq3:__pkg__"],
    deps = [
        ":bg-baseq3",
        ":server_api",
        "//code/botlib",
        "//code/botlib:api",
        "//code/qcommon:plugin",
        "//code/qcommon:shared",
        "//code/qcommon:shared_api",
        "//code/qcommon:voicechat",
    ],
)

cc_library(
    name = "teamarena",
    srcs = _COMMON_SRC,
    hdrs = _COMMON_HDRS,
    copts = SERVER_GAME_COPTS + SUPPRESS_WARNINGS_COPTS,
    defines = TEAM_ARENA_DEFINES + SERVER_GAME_DEFINES,
    visibility = ["//game/teamarena:__pkg__"],
    deps = [
        ":bg-teamarena",
        ":server_api",
        "//code/botlib",
        "//code/botlib:api",
        "//code/qcommon:plugin",
        "//code/qcommon:shared",
        "//code/qcommon:shared_api",
        "//code/qcommon:voicechat",
    ],
)
