cc_library(
    name = "ogg",
    srcs = [
        "include/ogg/config_types.h",
        "include/ogg/os_types.h",
        "src/bitwise.c",
        "src/framing.c",
    ],
    hdrs = [
        "include/ogg/ogg.h",
    ],
    defines = ["USE_INTERNAL_JPEG"],
    includes = ["include"],
    visibility = [
        "//code/libvorbis-1.3.6:__pkg__",
        "//third_party/opusfile:__pkg__",
    ],
)
