load("//build_defs:rules.bzl", "UI_COPTS", "UI_LINKOPTS")

cc_binary(
    name = "ui",
    srcs = [
        "ui_addbots.c",
        "ui_atoms.c",
        "ui_cinematics.c",
        "ui_confirm.c",
        "ui_connect.c",
        "ui_controls2.c",
        "ui_credits.c",
        "ui_demo2.c",
        "ui_display.c",
        "ui_gameinfo.c",
        "ui_ingame.c",
        "ui_local.h",
        "ui_main.c",
        "ui_menu.c",
        "ui_mfield.c",
        "ui_mods.c",
        "ui_network.c",
        "ui_playermodel.c",
        "ui_players.c",
        "ui_playersettings.c",
        "ui_preferences.c",
        "ui_qmenu.c",
        "ui_removebots.c",
        "ui_serverinfo.c",
        "ui_servers2.c",
        "ui_setup.c",
        "ui_sound.c",
        "ui_sparena.c",
        "ui_specifyserver.c",
        "ui_splevel.c",
        "ui_sppostgame.c",
        "ui_spskill.c",
        "ui_startserver.c",
        "ui_team.c",
        "ui_teamorders.c",
        "ui_video.c",
    ],
    copts = UI_COPTS,
    defines = [
        "MAC_OS_X_VERSION_MIN_REQUIRED=1100",
    ],
    linkopts = UI_LINKOPTS,
    linkshared = 1,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/client:api",
        "//code/game:bg_api",
        "//code/game:bg_misc",
        "//code/qcommon:shared",
        "//code/qcommon:shared_api",
        "//code/renderercommon:api",
        "//code/ui:api",
        "//code/ui:shared",
        "//code/ui:ui_syscalls",
    ],
)
